--- a/static/index.html
+++ b/static/index.html
@@ -38,6 +38,7 @@
 				for <a href="https://papermc.io">Paper</a>, that removes the need for BuildTools. MIT licensed.
 			</li>
 		</ul>
+		<p>This site is almost entirely other people's work. Spigot and Paperclip are the two biggest parts, I just
 			put them together in a script, run that script, and host the files here.</p>
 		<p>An effort has been made to comply with all licenses and provide where credit where appropriate.
 			<a href="https://github.com/lucyy-mc/">Please contact me if you have any concerns</a>, I'm not trying to
