--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,16 @@
 	<link href="css/bootstrap.css" rel="stylesheet">
 
 	<title>Hello, world!</title>
+	<style>
+		body {
+			background: #14171a;
+		}
+		.card {
+			border: 1px solid #0a0b0d;
+		}
+	</style>
 </head>
-<body>
+<body class="text-white">
 <header class="p-2 bg-dark text-white">
 	<div class="container">
 		<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between bg-dark">
@@ -26,7 +34,7 @@
 </header>
 
 <div class="container text-center">
-	<div class="px-4 py-2 my-3 my text-center border-bottom">
+	<div class="px-4 py-2 my-3 text-center border-bottom">
 		<h3>100% legal SpigotMC builds, for free.</h3>
 		Credits:
 		<ul>
@@ -48,7 +56,7 @@
 	</div>
 	<h3><a id="download"></a>Downloads</h3>
 	<div class="pt-3 pb-5 d-flex border-bottom">
-		<div class="card mx-auto" style="width: 26rem;" id="latest">
+		<div class="card mx-auto text-white bg-dark" style="width: 26rem;" id="latest">
 			<div class="card-body">
 				<h5 class="card-title">Loading...</h5>
 			</div>
@@ -59,7 +67,7 @@
 	<a id="faq"></a>
 	<h3>FAQ</h3>
 	<div class="container d-flex flex-row justify-content-center flex-wrap">
-		<div class="card m-2" style="width: 19rem">
+		<div class="card m-2 text-white bg-dark" style="width: 19rem">
 			<div class="card-body px-4">
 				<h5 class="card-title">Isn't this illegal?</h5>
 				<div class="small">No. SpigotMC don't redistribute jarfiles due to legal issues surrounding
@@ -70,7 +78,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="card m-2" style="width: 19rem">
+		<div class="card m-2 text-white bg-dark" style="width: 19rem">
 			<div class="card-body px-4">
 				<h5 class="card-title">Can I trust these builds?</h5>
 				<div class="small">That's for you to decide. The build script I use to put these together is
@@ -81,7 +89,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="card m-2" style="width: 19rem">
+		<div class="card m-2 text-white bg-dark" style="width: 19rem">
 			<div class="card-body px-4">
 				<h5 class="card-title">Why? What's the catch?</h5>
 				<div class="small">There's no catch. I do this because I find it fun and enjoy being helpful - the only
