--- a/static/index.html
+++ b/static/index.html
@@ -18,91 +18,93 @@
 	</style>
 </head>
 <body class="text-white">
-<header class="p-2 bg-dark text-white">
-	<div class="container">
-		<header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between bg-dark">
-			<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-light text-decoration-none">
-				Spigotclip
-			</a>
-			<ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-				<li><a href="#" class="nav-link px-2 link-light">Home</a></li>
-				<li><a href="#download" class="nav-link px-2 link-light">Downloads</a></li>
-				<li><a href="#faq" class="nav-link px-2 link-light">FAQ</a></li>
-			</ul>
-		</header>
-	</div>
-</header>
-
-<div class="container text-center">
-	<div class="px-4 py-2 my-3 text-center border-bottom">
-		<h3>100% legal SpigotMC builds, for free.</h3>
-		Credits:
-		<ul>
-			<li><a href="https://spigotmc.org">Spigot</a> - the server software. GPL licensed.
-				<small><a class="link-secondary"
-						  href="https://hub.spigotmc.org/stash/projects/SPIGOT/repos/spigot/browse">source</a></small>
-			</li>
-			<li><a href="https://github.com/PaperMC/Paperclip">Paperclip</a> - binary patch system, originally designed
-				for <a href="https://papermc.io">Paper</a>, that removes the need for BuildTools. MIT licensed.
-			</li>
-		</ul>
-		<p>This site is almost entirely other people's work. Spigot and Paperclip are the two biggest parts, I just
-			put them together in a script, run that script, and host the files here.</p>
-		<p>An effort has been made to comply with all licenses and provide where credit where appropriate.
-			<a href="https://github.com/lucyy-mc/">Please contact me if you have any concerns</a>, I'm not trying to
-			upset anyone.</p>
-		<p>These files are provided for the purpose of convenience only. I cannot accept any liability for any
-			circumstance stemming from the use of these files. Use at your own risk.</p>
-	</div>
-	<h3><a id="download"></a>Downloads</h3>
-	<div class="pt-3 pb-5 d-flex border-bottom">
-		<div class="card mx-auto text-white bg-dark" style="width: 26rem;" id="latest">
-			<div class="card-body">
-				<h5 class="card-title">Loading...</h5>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="container text-center px-4 py-4 my-3 border-bottom">
-	<a id="faq"></a>
-	<h3>FAQ</h3>
-	<div class="container d-flex flex-row justify-content-center flex-wrap">
-		<div class="card m-2 text-white bg-dark" style="width: 19rem">
-			<div class="card-body px-4">
-				<h5 class="card-title">Isn't this illegal?</h5>
-				<div class="small">No. SpigotMC don't redistribute jarfiles due to legal issues surrounding
-					redistributing Mojang's code, which Spigot depends on. PaperMC use a system called Paperclip that
-					avoids this issue. These jarfiles have been "paperclipped" so they are safe to redistribute. <a
-							href="https://github.com/PaperMC/Paperclip/blob/master/readme.md" class="link-secondary">The
-						readme</a> explains how it works in more detail.
-				</div>
-			</div>
-		</div>
-		<div class="card m-2 text-white bg-dark" style="width: 19rem">
-			<div class="card-body px-4">
-				<h5 class="card-title">Can I trust these builds?</h5>
-				<div class="small">That's for you to decide. The build script I use to put these together is
-					<a href="https://github.com/lucyy-mc/spigotclip" class="link-secondary">open-source</a>, and I have
-					<a href="https://www.spigotmc.org/members/__lucyy.969294/" class="link-secondary">a good reputation
-					</a>on the SpigotMC forums. Naturally I encourage good security practices, don't just take my word
-					for it, but I believe that these files are safe.
-				</div>
-			</div>
-		</div>
-		<div class="card m-2 text-white bg-dark" style="width: 19rem">
-			<div class="card-body px-4">
-				<h5 class="card-title">Why? What's the catch?</h5>
-				<div class="small">There's no catch. I do this because I find it fun and enjoy being helpful - the only
-					profit I earn by running this is experience.
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<footer class="container my-3 text-center">
-	<small>Run by <a class="link-secondary" href="https://lucyy.me">Lucy Poulton</a>.
-		Not affiliated with Mojang, SpigotMC, Paper or any third parties!</small>
-</footer>
-<script src="js/index.js"></script>
+    <header class="p-2 bg-dark text-white">
+        <div class="container">
+            <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between bg-dark">
+                <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-light text-decoration-none">
+                Spigotclip
+                </a>
+                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                    <li><a href="#" class="nav-link px-2 link-light">Home</a></li>
+                    <li><a href="#download" class="nav-link px-2 link-light">Downloads</a></li>
+                    <li><a href="#faq" class="nav-link px-2 link-light">FAQ</a></li>
+                </ul>
+            </header>
+        </div>
+    </header>
+    <div class="container text-center">
+        <div class="px-4 py-2 my-3 text-center border-bottom">
+            <h3>100% legal SpigotMC builds, for free.</h3>
+            Credits:
+            <ul>
+                <li><a href="https://spigotmc.org">Spigot</a> - the server software. GPL licensed.
+                    <small><a class="link-secondary"
+                        href="https://hub.spigotmc.org/stash/projects/SPIGOT/repos/spigot/browse">source</a></small>
+                </li>
+                <li><a href="https://github.com/PaperMC/Paperclip">Paperclip</a> - binary patch system, originally designed
+                    for <a href="https://papermc.io">Paper</a>, that removes the need for BuildTools. MIT licensed.
+                </li>
+            </ul>
+            <p>This site is almost entirely other people's work. Spigot and Paperclip are the two biggest parts, I just
+                put them together in a script, run that script, and host the files here.
+            </p>
+            <p>An effort has been made to comply with all licenses and provide where credit where appropriate.
+                <a href="https://github.com/lucyy-mc/">Please contact me if you have any concerns</a>, I'm not trying to
+                upset anyone.
+            </p>
+            <p>These files are provided for the purpose of convenience only. I cannot accept any liability for any
+                circumstance stemming from the use of these files. Use at your own risk.
+            </p>
+        </div>
+        <h3><a id="download"></a>Downloads</h3>
+        <div class="pt-3 pb-5 d-flex border-bottom">
+            <div class="card mx-auto text-white bg-dark" style="width: 26rem;" id="latest">
+                <div class="card-body">
+                    <h5 class="card-title">Loading...</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container text-center px-4 py-4 my-3 border-bottom">
+        <a id="faq"></a>
+        <h3>FAQ</h3>
+        <div class="container d-flex flex-row justify-content-center flex-wrap">
+            <div class="card m-2 text-white bg-dark" style="width: 19rem">
+                <div class="card-body px-4">
+                    <h5 class="card-title">Isn't this illegal?</h5>
+                    <div class="small">No. SpigotMC don't redistribute jarfiles due to legal issues surrounding
+                        redistributing Mojang's code, which Spigot depends on. PaperMC use a system called Paperclip that
+                        avoids this issue. These jarfiles have been "paperclipped" so they are safe to redistribute. <a
+                            href="https://github.com/PaperMC/Paperclip/blob/master/readme.md" class="link-secondary">The
+                        readme</a> explains how it works in more detail.
+                    </div>
+                </div>
+            </div>
+            <div class="card m-2 text-white bg-dark" style="width: 19rem">
+                <div class="card-body px-4">
+                    <h5 class="card-title">Can I trust these builds?</h5>
+                    <div class="small">That's for you to decide. The build script I use to put these together is
+                        <a href="https://github.com/lucyy-mc/spigotclip" class="link-secondary">open-source</a>, and I have
+                        <a href="https://www.spigotmc.org/members/__lucyy.969294/" class="link-secondary">a good reputation
+                        </a>on the SpigotMC forums. Naturally I encourage good security practices, don't just take my word
+                        for it, but I believe that these files are safe.
+                    </div>
+                </div>
+            </div>
+            <div class="card m-2 text-white bg-dark" style="width: 19rem">
+                <div class="card-body px-4">
+                    <h5 class="card-title">Why? What's the catch?</h5>
+                    <div class="small">There's no catch. I do this because I find it fun and enjoy being helpful - the only
+                        profit I earn by running this is experience.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="container my-3 text-center">
+        <small>Run by <a class="link-secondary" href="https://lucyy.me">Lucy Poulton</a>.
+        Not affiliated with Mojang, SpigotMC, Paper or any third parties!</small>
+    </footer>
+    <script src="js/index.js"></script>
 </body>
 </html>
